# not

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: macos-build.yml
src/: editor.ts  main.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  clipboard.rs  db.rs  lib.rs  main.rs
src/lib/: commands.test.ts  commands.ts  markdown.test.ts  shortcut.test.ts  shortcut.ts  swipe.test.ts  swipe.ts
