[package]
name = "not"
version = "0.1.0"
description = "A tiny swipeable scratchpad"
authors = ["rime"]
edition = "2024"

[lib]
name = "not_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.40", features = ["bundled", "backup"] }
uuid = { version = "1", features = ["v4"] }

