[package]
name = "not"
version = "0.3.0"
description = "A tiny swipeable scratchpad"
authors = ["rime"]
edition = "2024"

[lib]
name = "not_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.40", features = ["bundled", "backup"] }
uuid = { version = "1", features = ["v4"] }
arboard = { version = "3", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png"] }
png = "0.18"
sha2 = "0.10"
shell-words = "1"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSPasteboard", "NSScreen", "NSWindow", "NSWorkspace", "NSRunningApplication"] }
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy", rev = "e41550bf6482b3d51517478a822bb8b9f31626ca" }

[patch.crates-io]
global-hotkey = { path = "vendor/global-hotkey" }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
